# panelviz

./: .gitignore  README.md  component_summary.csv  component_summary.txt  mycnc.layout.yml  mycnc.yml  mycnc2.yml  panel-data.json  prompt.md  pyproject.toml  run_tests.cmd  test_conva.py  test_jointjs.py  viewer.css  viewer.html  viewer.js  wire_list.csv  wire_list.txt
scripts/: generate_outputs.py
src/panelviz/: __init__.py  cli.py  components.py  editor.py  parser.py  pdf_export.py  references.py  reports.py  routing.py  viewer.py  visualization.py
tests/: test_cli.py  test_components.py  test_editor.py  test_integration.py  test_parser.py  test_pdf_export.py  test_references.py  test_reports.py  test_routing.py  test_viewer.py  test_visualization.py
