[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panelviz"
version = "0.1.0"
description = "Generate wire lists and diagrams for electrical panels."
readme = "prompt.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.3",
    "pydantic>=2.8",
    "ruamel.yaml>=0.18.6",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.scripts]
panelviz = "panelviz.cli:main"
panelvis = "panelviz.cli:main"
panenvis = "panelviz.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-report=term-missing -p no:cacheprovider --assert=plain --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["panelviz"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.hatch.build.targets.wheel]
packages = ["src/panelviz"]
